--- a/examples/index.css
+++ b/examples/index.css
@@ -28,11 +28,15 @@ p {
 
   display: flex;
   flex-direction: column;
+
+  min-width: 0; min-height: 0;
 }
 
 
 #expl {
   text-align: center;
+
+  min-width: 0; min-height: 0;
 }
 
 
@@ -40,6 +44,8 @@ p {
   display: flex;
   width: 100%;
   margin-bottom: 1em;
+
+  min-width: 0; min-height: 0;
 }
 
 
@@ -49,6 +55,8 @@ p {
   font-size: 12pt;
   font-family: monospace;
   flex: 1 1 50px;
+
+  min-width: 0; min-height: 0;
 }
 
 
@@ -58,6 +66,8 @@ p {
   font-family: monospace;
   text-align: center;
   font-size: 11pt;
+
+  min-width: 0; min-height: 0;
 }
 
 
@@ -65,6 +75,8 @@ p {
   order: 999;
   flex-grow: 1;
   flex-shrink: 1;
+
+  min-width: 0; min-height: 0;
 }
 
 
@@ -73,4 +85,6 @@ p {
   order: 1;
 
   flex: 1 1 auto;
+
+  min-width: 0; min-height: 0;
 }
